Added Amatic font, ONLY changed layout of Home Button Page

--- a/testVERSIONWITHVIDEOBACKGROUND____TESTING_WITH_NEW_HEADER__1-Page-HTML.html
+++ b/testVERSIONWITHVIDEOBACKGROUND____TESTING_WITH_NEW_HEADER__1-Page-HTML.html
@@ -11,6 +11,9 @@
 		<link id="pt-sans" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
 		<link id="pt-sans-narrow" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700" rel="stylesheet">
 
+		<!--AMATIC FONT-->
+		<link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
+
 		<!--jQuery GOOGLE CDN -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
 
@@ -91,18 +94,19 @@
 
 			<!--1er COURS OFFERT-->
 			<!--================-->
-				<div class="btn-fake-blue-div .btns" id="fake-div">
+				<!--<div class="btn-fake-blue-div .btns" id="fake-div">
 					<div class="container">
 					</div>
-				</div>
+				</div>-->
 
 				<div class="btn-blue-div inline-block" id="btn-blue" style="">
 					<div class="container" id="btn-blue-container">
 						<h1 id="btn-blue-h1">#IMPACT - Commence avec un cours offert!</h1>
-						<img src="./images/ryugif.gif" class="mp-img" id="ryu">	
+						<img src="" class="mp-img" id="ryu">	
 						<span class="mp-header" id="jjb-header">JIU JITSU BRÉSILIEN + COACHING + AUTRES</span>
 
 						<!--Carousel-->
+						<div class="carousel-all">	
 						      <div id="myCarousel" class="carousel slide" data-ride="carousel">
 						        <!-- Indicators -->
 						        <ol class="carousel-indicators">
@@ -117,8 +121,10 @@
 						          <div class="item active">
 						            <img src="./images/workout.jpg" alt="core-traning">
 						            <div class="carousel-caption">
-						              <h3><strong>Core Strength</strong></h3>
-						              <p>The change is in you.</p>
+						              <h3 class="caption-title"><strong>Core Strength</strong></h3>
+						            </div>
+						            <div class="carousel-caption2">
+						              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id elementum tellus, vel laoreet massa. Quisque sit amet ante augue. Vestibulum eget porttitor nulla. Phasellus vel mauris egestas, elementum nisl at, volutpat velit. Curabitur sit amet interdum dui. Phasellus luctus semper mi. Vestibulum tincidunt cursus lorem, sit amet bibendum mi.</p>
 						            </div> 
 						          </div>
 
@@ -150,6 +156,7 @@
 						          <span class="sr-only">Next</span>
 						        </a>
 						      </div>
+						</div>      
 						<!--END CAROUSEL-->
 
 					</div>
