Changed the .moving-pages: 	1. min-height: 13em 	2. height: 100%
Changed some JS code for the Carousel bitch

--- a/testVERSIONWITHVIDEOBACKGROUND____TESTING_WITH_NEW_HEADER__1-Page-HTML.html
+++ b/testVERSIONWITHVIDEOBACKGROUND____TESTING_WITH_NEW_HEADER__1-Page-HTML.html
@@ -46,6 +46,7 @@
 				</div>
 
 				<nav>
+					<button type="button" id="test-button" style="top: 0;position: absolute; left: 35em;">Clicky</button>
 <!--New HEADER WITH PANELS-->					
 					<div class="header-links">
 					  <div class="header-links-container">
@@ -101,9 +102,9 @@
 
 				<div class="btn-blue-div inline-block" id="btn-blue" style="">
 					<div class="container" id="btn-blue-container">
-						<h1 id="btn-blue-h1">#IMPACT - Commence avec un cours offert!</h1>
+						<!--<h1 id="btn-blue-h1">#IMPACT - Commence avec un cours offert!</h1>
 						<img src="" class="mp-img" id="ryu">	
-						<span class="mp-header" id="jjb-header">JIU JITSU BRÉSILIEN + COACHING + AUTRES</span>
+						<span class="mp-header" id="jjb-header">JIU JITSU BRÉSILIEN + COACHING + AUTRES</span>-->
 
 						<!--Carousel-->
 						<div class="carousel-all">	
@@ -119,9 +120,9 @@
 						        <div class="carousel-inner" role="listbox">
 						          
 						          <div class="item active">
-						            <img src="./images/workout.jpg" alt="core-traning">
+						            <img src="./images/workout.jpg" alt="core-training">
 						            <div class="carousel-caption">
-						              <h3 class="caption-title"><strong>Core Strength</strong></h3>
+						              <h3 class="caption-title">Core Strength</h3>
 						            </div>
 						            <div class="carousel-caption2">
 						              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id elementum tellus, vel laoreet massa. Quisque sit amet ante augue. Vestibulum eget porttitor nulla. Phasellus vel mauris egestas, elementum nisl at, volutpat velit. Curabitur sit amet interdum dui. Phasellus luctus semper mi. Vestibulum tincidunt cursus lorem, sit amet bibendum mi.</p>
@@ -132,7 +133,9 @@
 						            <img src="./images/workout2.jpg" alt="workout2">
 						            <div class="carousel-caption">
 						              <h3><strong>Cardio</strong></h3>
-						              <p>It sucks - we know.</p>
+						            </div>
+						            <div class="carousel-caption2">
+						              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id elementum tellus, vel laoreet massa. Quisque sit amet ante augue. Vestibulum eget porttitor nulla. Phasellus vel mauris egestas, elementum nisl at, volutpat velit. Curabitur sit amet interdum dui. Phasellus luctus semper mi. Vestibulum tincidunt cursus lorem, sit amet bibendum mi.</p>
 						            </div> 
 						          </div>
 
@@ -140,8 +143,10 @@
 						            <img src="./images/workout.jpg" alt="jjb">
 						            <div class="carousel-caption">
 						              <h3><strong>Jiu Jitsu Bresilen</strong></h3>
-						              <p>Learn the ins-and-outs</p>
-						            </div> 
+						            </div>
+						            <div class="carousel-caption2">
+						              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id elementum tellus, vel laoreet massa. Quisque sit amet ante augue. Vestibulum eget porttitor nulla. Phasellus vel mauris egestas, elementum nisl at, volutpat velit. Curabitur sit amet interdum dui. Phasellus luctus semper mi. Vestibulum tincidunt cursus lorem, sit amet bibendum mi.</p>
+						            </div>  
 						          </div>
 
 						        </div>
