Tweaked small things in design and timing + content and JS on Carousel.

--- a/testVERSIONWITHVIDEOBACKGROUND____TESTING_WITH_NEW_HEADER__1-Page-HTML.html
+++ b/testVERSIONWITHVIDEOBACKGROUND____TESTING_WITH_NEW_HEADER__1-Page-HTML.html
@@ -138,7 +138,7 @@
 						              <h3 class="caption-title">Core Strength</h3>
 						            </div>
 						            <div class="carousel-caption2">
-						              	<h3>Core Strength</h3>
+						              	<h3 class="cc-title">Core Strength</h3>
 						              	<ul>
 						              		<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id elementum tellus, vel laoreet massa. Quisque sit amet ante augue.</li>
 						              		<li>Vestibulum eget porttitor nulla. Phasellus vel mauris egestas, elementum nisl at, volutpat velit.</li>
@@ -154,7 +154,7 @@
 						              <h3><strong>Cardio</strong></h3>
 						            </div>
 						            <div class="carousel-caption2">
-						              <h3>Cardio</h3>
+						              <h3 class="cc-title">Cardio</h3>
 						              <ul>
 						              	<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id elementum tellus, vel laoreet massa. Quisque sit amet ante augue.</li>
 						              	<li>Vestibulum eget porttitor nulla. Phasellus vel mauris egestas, elementum nisl at, volutpat velit.</li>
@@ -169,7 +169,7 @@
 						              <h3><strong>Jiu-Jitsu Brésilien</strong></h3>
 						            </div>
 						            <div class="carousel-caption2">
-						              <h3>Jiu-Jitsu Brésilien</h3>
+						              <h3 class="cc-title">Jiu-Jitsu Brésilien</h3>
 						              <ul>
 						              	<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id elementum tellus, vel laoreet massa. Quisque sit amet ante augue.</li>
 						              	<li>Vestibulum eget porttitor nulla. Phasellus vel mauris egestas, elementum nisl at, volutpat velit.</li>
