--- a/testVERSIONWITHVIDEOBACKGROUND____TESTING_WITH_NEW_HEADER__1-Page-HTML.html
+++ b/testVERSIONWITHVIDEOBACKGROUND____TESTING_WITH_NEW_HEADER__1-Page-HTML.html
@@ -53,16 +53,16 @@
 								<a href="#">OFFERT</a>
 							</div>
 
-						  	<div class="contact">
+						  	<div id="contact-header-div" class="contact">
 								<a href="#footer">CONTACT</a>
 							</div>
-							<div class="div5 what-we-do">
+							<div id="what-we-do-header-div" class="div5 what-we-do">
 								<a id="what-we-do-a" href="#a-propos">À PROPOS</a>
 							</div>
-							<div class="div5 tarifs">
+							<div id="tarifs-header-div" class="div5 tarifs">
 								<a href="#tarifs">TARIFS</a>
 							</div>
-							<div class="div5 blog">
+							<div id="blog-header-div" class="div5 blog">
 								<a href="#blog">BLOG</a>
 							</div>
 						     <!--<div class="div5 contact-us"><a href="#">CONTACT US</a></div>-->
@@ -139,17 +139,19 @@
 						              Il existe différentes méthodes d'entraînement en musculation. Chaqu’une aboutissant à des differents resultats. La musculation avec ou sans matériels est bénéfique à tout âge. 
 						              </p>
 						            </div>
-						            <div class="carousel-caption2">    
-						              	<h3 class="cc-title">Détails du Cours</h3>
-						              	<ul>
-						              		<li>Prise de masse musculaire + augmentation de la force physique + l'entretien musculaire</li>
-						              		<li>Perte de poid</li>
-						              		<li>Amélioration de la posture:</li>
-						              		<ul style="padding: 0;">
-							              		<li>Peut soulager les douleures présentes au niveau du dos et des épaules</li>
-						              		</ul>
-						              		<li>CAF (Cuisses, Abdos, Fessiers)</li>
-						              	</ul>
+						            <div class="carousel-caption2"> 
+						            	<div class="cc2-content">   
+							              	<h3 class="cc-title">Détails du Cours</h3>
+							              	<ul>
+							              		<li>Prise de masse musculaire + augmentation de la force physique + l'entretien musculaire</li>
+							              		<li>Perte de poid</li>
+							              		<li>Amélioration de la posture:</li>
+							              		<ul style="padding: 0;">
+								              		<li>Peut soulager les douleures présentes au niveau du dos et des épaules</li>
+							              		</ul>
+							              		<li>CAF (Cuisses, Abdos, Fessiers)</li>
+							              	</ul>
+							            </div>  	
 						            </div> 
 						          </div>
 
@@ -164,12 +166,14 @@
 						              </p>
 						            </div>
 						            <div class="carousel-caption2">
-						              <h3 class="cc-title">Détails du Cours</h3>
-						              <ul>
-						              	<li>Perte de graisse >> Perte de poid</li>
-					              		<li>Développement de l'endurance cardio-respiratoire</li>
-					              		<li>Développement de l'endurance musculaire</li>
-					              		</ul>
+						            	<div class="cc2-content">	
+							                <h3 class="cc-title">Détails du Cours</h3>
+							                <ul>
+							              		<li>Perte de graisse >> Perte de poid</li>
+						              			<li>Développement de l'endurance cardio-respiratoire</li>
+						              			<li>Développement de l'endurance musculaire</li>
+						              		</ul>
+						              	</div>	
 						            </div> 
 						          </div>
 
@@ -184,15 +188,17 @@
 						              </p>
 						            </div>
 						            <div class="carousel-caption2">
-						              <h3 class="cc-title">Détails du Cours</h3>
-						              <p style="font-size: 66%; padding: 0 0.3em; margin-top: 0.3em;">Les techniques ressemblent à celles incorporées dans la lutte et le judo. Ce sport peut être pratiqué en kimono ou en simple tenue de sport.
-						              <br>
-						              Cette discipline est ouverte à tout âge et peut être pratiquée en loisir ou en compétition. </p>
-						              <ul>
-	              	              		<li>Excellent pour le self défense.</li>
-	              	              		<li>Développement de la force physique</li>
-	              	              		<li>Développement de l'endurance musculaire et cardio-respiratoire</li>
-						              </ul>
+										<div class="cc2-content">						            
+							              <h3 class="cc-title">Détails du Cours</h3>
+							              <p style="font-size: 66%; padding: 0 0.3em; margin-top: 0.3em;">Les techniques ressemblent à celles incorporées dans la lutte et le judo. Ce sport peut être pratiqué en kimono ou en simple tenue de sport.
+							              <br>
+							              Cette discipline est ouverte à tout âge et peut être pratiquée en loisir ou en compétition. </p>
+							              <ul>
+		              	              		<li>Excellent pour le self défense.</li>
+		              	              		<li>Développement de la force physique</li>
+		              	              		<li>Développement de l'endurance musculaire et cardio-respiratoire</li>
+							              </ul>
+							            </div>  
 						            </div>  
 						          </div>
 
